# nRCM-Viewer

./: .gitignore  MANIFEST.in  README.md  app.py  app.spec  pyproject.toml  setup.cfg  setup.py
nrcm_viewer/: __init__.py  __main__.py  application.py  data.py  utils.py
nrcm_viewer/settings/: __init__.py  app_settings.py
nrcm_viewer/ui/: main_widget.py  main_window.py  plot_widget.py  table_model.py
resources/ui/: main_widget.ui  main_window.ui
