[metadata]
name = nrcm_viewer
version = attr: nrcm_viewer.__version__
description = Not RCM Viewer. An alternative to the RCM Viewer used by SBB Infrastructure
long_description = file: README.md
url = https://github.com/antolu/nRCM-Viewer
author = Anton Lu
author_email = anton96lu@gmail.com
license = GNU General Public License version 3
platform = Windows, Linux
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
include_package_data = true
packages = find:

python_requires = >= 3.7
install_requires =
    dataclasses
    multipledispatch
    numpy>=1.19
    opencv-python
    pandas
    pillow
    PyQt5
    pyqt5ac
    pyqtgraph

[options.extras_require]
test =
    flake8
    pylint
    pytest-cov
dev =
    pyinstaller

[flake8]
extend-ignore =
    F
